# can_llms_argue

./: .gitignore  README.md
discussion_module/: README.md  pyproject.toml  start.sh  stop.sh
discussion_module/resources/config/: participant_config.txt
discussion_module/resources/output/: discussion_2025_12_15_16_37_36.json  discussion_2025_12_15_16_37_36.txt  discussion_2025_12_15_16_41_28.json  discussion_2025_12_15_16_41_28.txt  discussion_2025_12_15_17_00_26.json  discussion_2025_12_15_17_00_26.txt  discussion_2025_12_15_20_08_17.json  discussion_2025_12_15_20_08_17.txt  discussion_2025_12_15_20_10_33.json  discussion_2025_12_15_20_10_33.txt  discussion_2025_12_15_20_19_12.json  discussion_2025_12_15_20_19_12.txt  discussion_2025_12_15_20_25_30.json  discussion_2025_12_15_20_25_30.txt
discussion_module/src/discussion_module/: discussion_config.py  generate_docker_compose.py  orchestrator.py
helpers/: sonarqube.txt
helpers/pycharmConfigurations/: Analyser.run.xml  Benchmark test.run.xml  Discussion.run.xml  GPT oracle.run.xml  Llama oracle.run.xml  UvA oracle.run.xml
oracle/: README.md  pyproject.toml
oracle/resources/oracle_config/: config_aif.txt  config_aif_llama.txt  config_toulmin.txt
oracle/src/oracle/: __main__.py
oracle/src/oracle/models/: gpt_oracle.py  llama_oracle.py  oracle_config.py  result_calculator.py  shared.py  uva_oracle.py
oracle/src/oracle/test/: dataset_parser.py  ged_calculator.py  graph_comparison.py  models.py  test_config.py
shared/: README.md  pyproject.toml
shared/src/shared/: helper.py  parser.py
