[project]
name = "shared"
version = "0.1.0"
description = "Shared utilities for the framework"
requires-python = ">=3.9.6"

dependencies = [
    "jsonfinder"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
